@@ -1,0 +1,2 @@
+%Error-PORTSHORT: t/t_lint_setout_bad.v:16: Output port is connected to a constant pin, electrical short
+%Error: Exiting due to
