@@ -6,6 +6,8 @@ The contributors that suggested a given feature are shown in []. Thanks!
 
 ***   Add +verilator+seed, bug1396. [Stan Sokorac]
 
+****  Report PORTSHORT errors on concat constants, bug 1400. [Will Korteland]
+
 ****  Fix VERILATOR_GDB being ignored, msg2860. [Yu Sheng Lin]
 
 ****  Fix $value$plus$args missing verilated_heavy.h. [Yi-Chung Chen]
